--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .DS_Store
-.sonar*
+.sonar/
 sonar-project.properties
+.settings
+benchmarks/
+buldSrc/
+client/
+qa/
+rest-api-spec/
+test/
+build/
+distribution/
+dev-tools/
+docs/
+plugins/
+modules/
+
+
