--- a/core/build.gradle
+++ b/core/build.gradle
@@ -75,6 +75,15 @@ dependencies {
   compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jackson}"
   compile "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${versions.jackson}"
 
+  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.8.5'
+  compile group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '5.0.3'
+  compile group: 'org.codehaus.woodstox', name: 'stax2-api', version: '3.1.4'
+  compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.8.5'
+
+
+
+
+
   // percentiles aggregation
   compile 'com.tdunning:t-digest:3.0'
   // precentil ranks aggregation
@@ -89,6 +98,11 @@ dependencies {
   compile "org.apache.logging.log4j:log4j-core:${versions.log4j}", optional
   // to bridge dependencies that are still on Log4j 1 to Log4j 2
   compile "org.apache.logging.log4j:log4j-1.2-api:${versions.log4j}", optional
+
+  //google libs.
+  compile group: 'com.google.guava', name: 'guava', version: '16.0.1'
+
+
 
   compile "net.java.dev.jna:jna:${versions.jna}"
 
@@ -127,8 +141,8 @@ forbiddenPatterns {
 task generateModulesList {
   List<String> modules = project(':modules').subprojects.collect { it.name }
   File modulesFile = new File(buildDir, 'generated-resources/modules.txt')
-  processResources.from(modulesFile) 
-  inputs.property('modules', modules) 
+  processResources.from(modulesFile)
+  inputs.property('modules', modules)
   outputs.file(modulesFile)
   doLast {
     modulesFile.parentFile.mkdirs()
@@ -138,11 +152,11 @@ task generateModulesList {
 
 task generatePluginsList {
   List<String> plugins = project(':plugins').subprojects
-    .findAll { it.name.contains('example') == false }
-    .collect { it.name }
+          .findAll { it.name.contains('example') == false }
+          .collect { it.name }
   File pluginsFile = new File(buildDir, 'generated-resources/plugins.txt')
-  processResources.from(pluginsFile) 
-  inputs.property('plugins', plugins) 
+  processResources.from(pluginsFile)
+  inputs.property('plugins', plugins)
   outputs.file(pluginsFile)
   doLast {
     pluginsFile.parentFile.mkdirs()
@@ -155,99 +169,99 @@ processResources {
 }
 
 thirdPartyAudit.excludes = [
-  // classes are missing!
+        // classes are missing!
 
-  // from com.fasterxml.jackson.dataformat.yaml.YAMLMapper (jackson-dataformat-yaml)
-  'com.fasterxml.jackson.databind.ObjectMapper',
+        // from com.fasterxml.jackson.dataformat.yaml.YAMLMapper (jackson-dataformat-yaml)
+        'com.fasterxml.jackson.databind.ObjectMapper',
 
-  // from log4j
-  'com.fasterxml.jackson.annotation.JsonInclude$Include',
-  'com.fasterxml.jackson.databind.DeserializationContext',
-  'com.fasterxml.jackson.databind.JsonMappingException',
-  'com.fasterxml.jackson.databind.JsonNode',
-  'com.fasterxml.jackson.databind.Module$SetupContext',
-  'com.fasterxml.jackson.databind.ObjectReader',
-  'com.fasterxml.jackson.databind.ObjectWriter',
-  'com.fasterxml.jackson.databind.SerializerProvider',
-  'com.fasterxml.jackson.databind.deser.std.StdDeserializer',
-  'com.fasterxml.jackson.databind.deser.std.StdScalarDeserializer',
-  'com.fasterxml.jackson.databind.module.SimpleModule',
-  'com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter',
-  'com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider',
-  'com.fasterxml.jackson.databind.ser.std.StdScalarSerializer',
-  'com.fasterxml.jackson.databind.ser.std.StdSerializer',
-  'com.fasterxml.jackson.dataformat.xml.JacksonXmlModule',
-  'com.fasterxml.jackson.dataformat.xml.XmlMapper',
-  'com.fasterxml.jackson.dataformat.xml.util.DefaultXmlPrettyPrinter',
-  'com.lmax.disruptor.BlockingWaitStrategy',
-  'com.lmax.disruptor.BusySpinWaitStrategy',
-  'com.lmax.disruptor.EventFactory',
-  'com.lmax.disruptor.EventTranslator',
-  'com.lmax.disruptor.EventTranslatorTwoArg',
-  'com.lmax.disruptor.EventTranslatorVararg',
-  'com.lmax.disruptor.ExceptionHandler',
-  'com.lmax.disruptor.LifecycleAware',
-  'com.lmax.disruptor.RingBuffer',
-  'com.lmax.disruptor.Sequence',
-  'com.lmax.disruptor.SequenceReportingEventHandler',
-  'com.lmax.disruptor.SleepingWaitStrategy',
-  'com.lmax.disruptor.TimeoutBlockingWaitStrategy',
-  'com.lmax.disruptor.WaitStrategy',
-  'com.lmax.disruptor.YieldingWaitStrategy',
-  'com.lmax.disruptor.dsl.Disruptor',
-  'com.lmax.disruptor.dsl.ProducerType',
-  'javax.jms.Connection',
-  'javax.jms.ConnectionFactory',
-  'javax.jms.Destination',
-  'javax.jms.Message',
-  'javax.jms.MessageConsumer',
-  'javax.jms.MessageListener',
-  'javax.jms.MessageProducer',
-  'javax.jms.ObjectMessage',
-  'javax.jms.Session',
-  'javax.mail.Authenticator',
-  'javax.mail.Message$RecipientType',
-  'javax.mail.PasswordAuthentication',
-  'javax.mail.Session',
-  'javax.mail.Transport',
-  'javax.mail.internet.InternetAddress',
-  'javax.mail.internet.InternetHeaders',
-  'javax.mail.internet.MimeBodyPart',
-  'javax.mail.internet.MimeMessage',
-  'javax.mail.internet.MimeMultipart',
-  'javax.mail.internet.MimeUtility',
-  'javax.mail.util.ByteArrayDataSource',
-  'javax.persistence.AttributeConverter',
-  'javax.persistence.EntityManager',
-  'javax.persistence.EntityManagerFactory',
-  'javax.persistence.EntityTransaction',
-  'javax.persistence.Persistence',
-  'javax.persistence.PersistenceException',
-  'org.apache.commons.compress.compressors.CompressorStreamFactory',
-  'org.apache.commons.compress.utils.IOUtils',
-  'org.apache.commons.csv.CSVFormat',
-  'org.apache.commons.csv.QuoteMode',
-  'org.apache.kafka.clients.producer.KafkaProducer',
-  'org.apache.kafka.clients.producer.Producer',
-  'org.apache.kafka.clients.producer.ProducerRecord',
-  'org.codehaus.stax2.XMLStreamWriter2',
-  'org.osgi.framework.AdaptPermission',
-  'org.osgi.framework.AdminPermission',
-  'org.osgi.framework.Bundle',
-  'org.osgi.framework.BundleActivator',
-  'org.osgi.framework.BundleContext',
-  'org.osgi.framework.BundleEvent',
-  'org.osgi.framework.BundleReference',
-  'org.osgi.framework.FrameworkUtil',
-  'org.osgi.framework.SynchronousBundleListener',
-  'org.osgi.framework.wiring.BundleWire',
-  'org.osgi.framework.wiring.BundleWiring',
-  'org.zeromq.ZMQ$Context',
-  'org.zeromq.ZMQ$Socket',
-  'org.zeromq.ZMQ',
+        // from log4j
+        'com.fasterxml.jackson.annotation.JsonInclude$Include',
+        'com.fasterxml.jackson.databind.DeserializationContext',
+        'com.fasterxml.jackson.databind.JsonMappingException',
+        'com.fasterxml.jackson.databind.JsonNode',
+        'com.fasterxml.jackson.databind.Module$SetupContext',
+        'com.fasterxml.jackson.databind.ObjectReader',
+        'com.fasterxml.jackson.databind.ObjectWriter',
+        'com.fasterxml.jackson.databind.SerializerProvider',
+        'com.fasterxml.jackson.databind.deser.std.StdDeserializer',
+        'com.fasterxml.jackson.databind.deser.std.StdScalarDeserializer',
+        'com.fasterxml.jackson.databind.module.SimpleModule',
+        'com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter',
+        'com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider',
+        'com.fasterxml.jackson.databind.ser.std.StdScalarSerializer',
+        'com.fasterxml.jackson.databind.ser.std.StdSerializer',
+        'com.fasterxml.jackson.dataformat.xml.JacksonXmlModule',
+        'com.fasterxml.jackson.dataformat.xml.XmlMapper',
+        'com.fasterxml.jackson.dataformat.xml.util.DefaultXmlPrettyPrinter',
+        'com.lmax.disruptor.BlockingWaitStrategy',
+        'com.lmax.disruptor.BusySpinWaitStrategy',
+        'com.lmax.disruptor.EventFactory',
+        'com.lmax.disruptor.EventTranslator',
+        'com.lmax.disruptor.EventTranslatorTwoArg',
+        'com.lmax.disruptor.EventTranslatorVararg',
+        'com.lmax.disruptor.ExceptionHandler',
+        'com.lmax.disruptor.LifecycleAware',
+        'com.lmax.disruptor.RingBuffer',
+        'com.lmax.disruptor.Sequence',
+        'com.lmax.disruptor.SequenceReportingEventHandler',
+        'com.lmax.disruptor.SleepingWaitStrategy',
+        'com.lmax.disruptor.TimeoutBlockingWaitStrategy',
+        'com.lmax.disruptor.WaitStrategy',
+        'com.lmax.disruptor.YieldingWaitStrategy',
+        'com.lmax.disruptor.dsl.Disruptor',
+        'com.lmax.disruptor.dsl.ProducerType',
+        'javax.jms.Connection',
+        'javax.jms.ConnectionFactory',
+        'javax.jms.Destination',
+        'javax.jms.Message',
+        'javax.jms.MessageConsumer',
+        'javax.jms.MessageListener',
+        'javax.jms.MessageProducer',
+        'javax.jms.ObjectMessage',
+        'javax.jms.Session',
+        'javax.mail.Authenticator',
+        'javax.mail.Message$RecipientType',
+        'javax.mail.PasswordAuthentication',
+        'javax.mail.Session',
+        'javax.mail.Transport',
+        'javax.mail.internet.InternetAddress',
+        'javax.mail.internet.InternetHeaders',
+        'javax.mail.internet.MimeBodyPart',
+        'javax.mail.internet.MimeMessage',
+        'javax.mail.internet.MimeMultipart',
+        'javax.mail.internet.MimeUtility',
+        'javax.mail.util.ByteArrayDataSource',
+        'javax.persistence.AttributeConverter',
+        'javax.persistence.EntityManager',
+        'javax.persistence.EntityManagerFactory',
+        'javax.persistence.EntityTransaction',
+        'javax.persistence.Persistence',
+        'javax.persistence.PersistenceException',
+        'org.apache.commons.compress.compressors.CompressorStreamFactory',
+        'org.apache.commons.compress.utils.IOUtils',
+        'org.apache.commons.csv.CSVFormat',
+        'org.apache.commons.csv.QuoteMode',
+        'org.apache.kafka.clients.producer.KafkaProducer',
+        'org.apache.kafka.clients.producer.Producer',
+        'org.apache.kafka.clients.producer.ProducerRecord',
+        'org.codehaus.stax2.XMLStreamWriter2',
+        'org.osgi.framework.AdaptPermission',
+        'org.osgi.framework.AdminPermission',
+        'org.osgi.framework.Bundle',
+        'org.osgi.framework.BundleActivator',
+        'org.osgi.framework.BundleContext',
+        'org.osgi.framework.BundleEvent',
+        'org.osgi.framework.BundleReference',
+        'org.osgi.framework.FrameworkUtil',
+        'org.osgi.framework.SynchronousBundleListener',
+        'org.osgi.framework.wiring.BundleWire',
+        'org.osgi.framework.wiring.BundleWiring',
+        'org.zeromq.ZMQ$Context',
+        'org.zeromq.ZMQ$Socket',
+        'org.zeromq.ZMQ',
 
-  // from org.locationtech.spatial4j.io.GeoJSONReader (spatial4j)
-  'org.noggit.JSONParser', 
+        // from org.locationtech.spatial4j.io.GeoJSONReader (spatial4j)
+        'org.noggit.JSONParser',
 ]
 
 // dependency license are currently checked in distribution
@@ -255,9 +269,9 @@ dependencyLicenses.enabled = false
 
 if (isEclipse == false || project.path == ":core-tests") {
   task integTest(type: RandomizedTestingTask,
-                 group: JavaBasePlugin.VERIFICATION_GROUP,
-                 description: 'Multi-node tests',
-                 dependsOn: test.dependsOn) {
+          group: JavaBasePlugin.VERIFICATION_GROUP,
+          description: 'Multi-node tests',
+          dependsOn: test.dependsOn) {
     configure(BuildPlugin.commonTestConfig(project))
     classpath = project.test.classpath
     testClassesDir = project.test.testClassesDir
