--- a/distribution/src/main/resources/bin/feature.config
+++ b/distribution/src/main/resources/bin/feature.config
@@ -1,5 +1,5 @@
 #Wed Nov 16 12:06:48 CET 2016
 XML=false
 UsageStatistics=false
-LateParsingQuery=true
-GeoKMeans=true
+LateParsingQuery=false
+GeoKMeans=false
