--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,6 +27,12 @@ apply plugin: 'nebula.optional-base'
 apply plugin: 'nebula.maven-base-publish'
 apply plugin: 'nebula.maven-scm'
 
+checkstyle {
+  checkstyleTest.enabled = false
+  forbiddenApisMain.enabled = false
+  licenseHeaders.enabled = false
+}
+
 publishing {
   publications {
     nebula {
