now default values are true in the .config file

--- a/distribution/src/main/resources/bin/feature.config
+++ b/distribution/src/main/resources/bin/feature.config
@@ -1,6 +1,6 @@
 #Wed Nov 16 12:06:48 CET 2016
-XML=false
-UsageStatistics=false
-LateParsingQuery=false
-GeoKMeans=false
-StandardNumberAnalysis=false
+XML=true
+UsageStatistics=true
+LateParsingQuery=true
+GeoKMeans=true
+StandardNumberAnalysis=true
